--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Jonathan K Nelson
+title: 
 # description: I am a geographic information scientist at the Vermont Agency of Transportation. My research explores the role of cartography, design, and visualization in making spatial data more accessible, legible, and valuable.
